# breadbuddy_prototyp

./: .gitignore  CMakeLists.txt  Probe.json  sdkconfig  sdkconfig.old  test.json
data/: beenden.html  index.html  messung.html  style.css  zusammenfassung.html
main/: CMakeLists.txt  analysis.c  analysis.h  breadbuddy_prototyp.c  connect_database.c  connect_database.h  connect_wifi.c  current_time.c  current_time.h  httprequest.c  httprequest.h  idf_component.yml  measurement_timing.c  measurement_timing.h  probe_data.c  probe_data.h  sensor_co2.c  sensor_co2.h  sensor_ethanol.c  sensor_ethanol.h  sensor_resistance.c  sensor_resistance.h  sensor_temp.c  sensor_temp.h  webserver.c  webserver.h
