idf_component_register(
    SRCS
        "breadbuddy_prototyp.c"
        "sensor_resistance.c"
        "sensor_ethanol.c"
        "sensor_temp.c"
        "sensor_co2.c"  
        "httprequest.c"
        "connect_wifi.c"
    INCLUDE_DIRS 
        "."     
    PRIV_REQUIRES 
        esp_adc
        esp_driver_gpio
        nvs_flash
        esp_wifi
        driver
)
                       
